Added generation of hardware-bound node ID to mqtt package, fixed ethtool usage interface detection in UI (WIP), cleaned up dependencies

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -41,5 +41,5 @@ nfpms:
     version_metadata: git
     contents:
       - src: config.yml
-        dst: /etc/openrfsense/config.yml
+        dst: /etc/openrfsense/config.example.yml
         type: "config|noreplace"
