--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,10 @@
 node:
   port: 9090
+  location:
+    name: Trento
+    elevation: 200.0
+    latitude: 46.0669256
+    longitude: 11.1481102
 backend:
   host: "127.0.0.1"
   port: 8081
