Added string slice handling via environment variables in config, added more packaging formats in goreleaser

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -43,8 +43,15 @@ nfpms:
     license: AGPLv3
     formats:
       - deb
+      - apk
+      - rpm
+      - archlinux
     version_metadata: git
     contents:
       - src: config.yml
         dst: /etc/openrfsense/config.example.yml
         type: "config|noreplace"
+    deb:
+      lintian_overrides:
+        - statically-linked-binary
+        - changelog-file-missing-in-native-package
