Hooked up sensor manager to handlers, added check for Wifi password in UI

--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ node:
 # Location information (required)
 location:
   # Readable name of the location
-  name: Milano
+  name: Trento
   # Altitude of the sensor
   elevation: 200.0
   # Geographic coordinates of the sensor
